--- a/partners.html
+++ b/partners.html
@@ -4,109 +4,393 @@
   <meta charset="UTF-8">
   <title>Partners | HEP C - Venier Project</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400&family=DM+Serif+Display&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
-    body {
-      font-family: 'Roboto', sans-serif;
-      margin: 0;
-      background-color: #fffaf5;
+    :root {
+      --primary: #d35400;
+      --primary-light: #e67e22;
+      --secondary: #1a1a2e;
+      --cream: #faf8f5;
+      --white: #ffffff;
+      --gray-300: #d1d1d1;
+      --gray-500: #888;
+      --gray-700: #444;
+      --gray-900: #1a1a1a;
+      --transition: all 0.2s ease;
     }
 
-    header {
-      background-color: #ff9f43;
-      padding: 1rem 2rem;
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body { font-family: 'DM Sans', sans-serif; background-color: var(--cream); color: var(--gray-900); line-height: 1.7; font-size: 17px; }
+    h1, h2, h3 { font-family: 'DM Serif Display', serif; font-weight: 400; }
+    .container { max-width: 1100px; margin: 0 auto; padding: 0 2rem; }
+
+    header { background-color: var(--cream); padding: 1.25rem 0; border-bottom: 1px solid var(--gray-300); }
+    header .container { display: flex; justify-content: space-between; align-items: center; }
+    .logo img { height: 220px; }
+    nav { display: flex; gap: 0.25rem; align-items: center; }
+    nav a { text-decoration: none; color: var(--gray-700); font-weight: 500; padding: 0.5rem 1rem; font-size: 0.95rem; }
+    nav a:hover { color: var(--primary); }
+    nav a.nav-cta { background-color: var(--secondary); color: var(--white); border-radius: 4px; margin-left: 0.5rem; }
+
+    .page-header { padding: 5rem 0 4rem; border-bottom: 1px solid var(--gray-300); }
+    .page-header h1 { font-size: 3rem; margin-bottom: 1rem; }
+    .page-label { text-transform: uppercase; font-size: 0.75rem; letter-spacing: 2px; color: var(--primary); margin-bottom: 1rem; font-weight: 500; }
+    .page-header p { font-size: 1.2rem; color: var(--gray-500); max-width: 550px; }
+
+    .section { padding: 5rem 0; }
+    .section-alt { background: var(--white); }
+    .section-header { margin-bottom: 3rem; }
+    .section-label { text-transform: uppercase; font-size: 0.75rem; letter-spacing: 2px; color: var(--primary); margin-bottom: 0.75rem; font-weight: 500; }
+    .section-header h2 { font-size: 2.25rem; margin-bottom: 1rem; }
+    .section-header p { color: var(--gray-500); max-width: 550px; }
+
+    /* Partner Types Grid */
+    .partners-grid {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 0;
+      border-top: 1px solid var(--gray-300);
+      border-left: 1px solid var(--gray-300);
+    }
+
+    .partner-item {
+      padding: 2.5rem 2rem;
+      border-right: 1px solid var(--gray-300);
+      border-bottom: 1px solid var(--gray-300);
+    }
+
+    .partner-icon {
+      width: 50px;
+      height: 50px;
+      border: 2px solid var(--primary);
+      border-radius: 50%;
       display: flex;
-      justify-content: space-between;
       align-items: center;
+      justify-content: center;
+      color: var(--primary);
+      margin-bottom: 1.5rem;
     }
 
-    header h1 {
-      margin: 0;
-      color: #fff;
+    .partner-item h3 { font-size: 1.35rem; margin-bottom: 0.75rem; }
+    .partner-item p { color: var(--gray-700); font-size: 0.95rem; }
+
+    /* Benefits */
+    .benefits-list {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 0;
     }
 
-    nav ul {
-      list-style: none;
-      display: flex;
-      gap: 1rem;
-      margin: 0;
-      padding: 0;
-    }
-
-    nav a {
-      text-decoration: none;
-      color: #fff;
-      font-weight: bold;
-    }
-
-    main {
+    .benefit-item {
       padding: 2rem;
+      border-bottom: 1px solid var(--gray-300);
+      display: grid;
+      grid-template-columns: 50px 1fr;
+      gap: 1.5rem;
     }
 
-    h2 {
-      text-align: center;
-      color: #4a2e00;
+    .benefit-item:nth-child(odd) { border-right: 1px solid var(--gray-300); }
+
+    .benefit-icon {
+      width: 40px;
+      height: 40px;
+      border: 2px solid var(--primary);
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: var(--primary);
     }
 
-    .map-container {
-      margin: 2rem auto;
-      max-width: 800px;
-      border: 3px solid #ff9f43;
-      border-radius: 8px;
-      height: 500px;
+    .benefit-content h4 {
+      font-family: 'DM Sans', sans-serif;
+      font-weight: 700;
+      margin-bottom: 0.5rem;
     }
 
-    iframe {
-      width: 100%;
-      height: 100%;
-      border: none;
-      border-radius: 8px;
-    }
+    .benefit-content p { color: var(--gray-700); font-size: 0.95rem; margin: 0; }
 
-    .description {
-      text-align: center;
+    /* Timeline */
+    .timeline {
       max-width: 700px;
-      margin: 0 auto 2rem auto;
+      margin: 0 auto;
+      border-left: 2px solid var(--gray-300);
+      padding-left: 3rem;
     }
 
-    footer {
-      background-color: #ffcc99;
-      text-align: center;
-      padding: 1rem;
-      margin-top: 2rem;
+    .timeline-item {
+      position: relative;
+      padding-bottom: 2.5rem;
+    }
+
+    .timeline-item:last-child { padding-bottom: 0; }
+
+    .timeline-item::before {
+      content: "";
+      width: 14px;
+      height: 14px;
+      background: var(--primary);
+      border-radius: 50%;
+      position: absolute;
+      left: -3.45rem;
+      top: 0.3rem;
+    }
+
+    .timeline-num {
+      font-family: 'DM Serif Display', serif;
+      font-size: 1.5rem;
+      color: var(--gray-300);
+      margin-bottom: 0.5rem;
+    }
+
+    .timeline-item h4 {
+      font-family: 'DM Sans', sans-serif;
+      font-weight: 700;
+      margin-bottom: 0.5rem;
+      font-size: 1.1rem;
+    }
+
+    .timeline-item p { color: var (--gray-500); }
+
+    /* CTA */
+    .cta-banner { background: var(--primary); padding: 4rem 0; }
+    .cta-content { display: flex; justify-content: space-between; align-items: center; gap: 2rem; }
+    .cta-text h2 { color: var(--white); font-size: 2rem; margin-bottom: 0.5rem; }
+    .cta-text p { color: rgba(255,255,255,0.85); }
+    .btn { padding: 1rem 2rem; text-decoration: none; font-weight: 600; font-size: 0.95rem; }
+    .btn-dark { background: var(--secondary); color: var(--white); }
+    .btn-dark:hover { background: var(--gray-900); }
+
+    /* Footer */
+    footer { background: var(--secondary); color: var(--white); padding: 4rem 0 2rem; }
+    .footer-grid { display: grid; grid-template-columns: 2fr repeat(3, 1fr); gap: 3rem; padding-bottom: 3rem; border-bottom: 1px solid rgba(255,255,255,0.1); }
+    .footer-about p { color: rgba(255,255,255,0.6); font-size: 0.95rem; margin-top: 1rem; }
+    .footer-col h4 { font-family: 'DM Sans', sans-serif; font-weight: 700; font-size: 0.85rem; text-transform: uppercase; letter-spacing: 1px; margin-bottom: 1.5rem; color: rgba(255,255,255,0.4); }
+    .footer-col ul { list-style: none; }
+    .footer-col li { margin-bottom: 0.75rem; }
+    .footer-col a { color: rgba(255,255,255,0.7); text-decoration: none; font-size: 0.95rem; }
+    .footer-col a:hover { color: var(--primary-light); }
+    .footer-bottom { padding-top: 2rem; text-align: center; color: rgba(255,255,255,0.4); font-size: 0.85rem; }
+
+    @media (max-width: 900px) {
+      .partners-grid { grid-template-columns: 1fr; }
+      .benefits-list { grid-template-columns: 1fr; }
+      .benefit-item { border-right: none !important; }
+      .cta-content { flex-direction: column; text-align: center; }
+      .footer-grid { grid-template-columns: 1fr; }
+    }
+    @media (max-width: 600px) {
+      nav { display: none; }
+      .page-header h1 { font-size: 2.25rem; }
     }
   </style>
 </head>
 <body>
 
 <header>
-  <h1>HEP C - Venier Project</h1>
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About Us</a></li>
-      <li><a href="services.html">Services</a></li>
-      <li><a href="partners.html">Partners</a></li>
-      <li><a href="resources.html">Resources</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
+  <div class="container">
+    <div class="logo"><img src="assets/imgs/test.png" alt="HCV Free - The Venier Project"></div>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="services.html">Services</a>
+      <a href="impact.html">Impact</a>
+      <a href="resources.html">Resources</a>
+      <a href="partners.html">Partners</a>
+      <a href="contact.html" class="nav-cta">Contact</a>
+    </nav>
+  </div>
 </header>
 
-<main>
-  <h2>Our Partners</h2>
-  <p class="description">
-    We are proud to work with a growing network of community clinics, OAT pharmacies, shelters, and public health groups to deliver impactful Hepatitis C care across Ontario.
-  </p>
-
-  <div class="map-container">
-    <!-- Replace this URL with your custom Google My Map -->
-    <iframe src="https://www.google.com/maps/" width="640" height="480"></iframe>
+<section class="page-header">
+  <div class="container">
+    <p class="page-label">Partner With Us</p>
+    <h1>Join our mission to eliminate Hep C</h1>
+    <p>Through collaborative, community-centered approaches across Ontario.</p>
   </div>
-</main>
+</section>
+
+<section class="section">
+  <div class="container">
+    <div class="section-header">
+      <p class="section-label">Who Can Partner</p>
+      <h2>Organizations committed to improving health outcomes</h2>
+    </div>
+    <div class="partners-grid">
+      <div class="partner-item">
+        <div class="partner-icon"><i class="fas fa-clinic-medical"></i></div>
+        <h3>Healthcare Clinics</h3>
+        <p>Primary care clinics, community health centres, and walk-in clinics expanding HCV screening and treatment.</p>
+      </div>
+      <div class="partner-item">
+        <div class="partner-icon"><i class="fas fa-prescription-bottle-alt"></i></div>
+        <h3>Pharmacies</h3>
+        <p>Community pharmacies interested in pharmacist-led HCV testing and treatment initiation programs.</p>
+      </div>
+      <div class="partner-item">
+        <div class="partner-icon"><i class="fas fa-home"></i></div>
+        <h3>Shelters & Housing</h3>
+        <p>Emergency shelters, transitional housing, and supportive housing facilities serving at-risk populations.</p>
+      </div>
+      <div class="partner-item">
+        <div class="partner-icon"><i class="fas fa-users"></i></div>
+        <h3>Community Organizations</h3>
+        <p>Non-profits, harm reduction services, and community groups working with priority populations.</p>
+      </div>
+      <div class="partner-item">
+        <div class="partner-icon"><i class="fas fa-feather-alt"></i></div>
+        <h3>Indigenous Health Centres</h3>
+        <p>Aboriginal Health Access Centres and Indigenous-led organizations serving First Nations, Inuit, and Métis.</p>
+      </div>
+      <div class="partner-item">
+        <div class="partner-icon"><i class="fas fa-university"></i></div>
+        <h3>Research Institutions</h3>
+        <p>Academic institutions focused on HCV epidemiology, treatment, and elimination strategies.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="section section-alt">
+  <div class="container">
+    <div class="section-header">
+      <p class="section-label">Why Partner</p>
+      <h2>Together we can achieve more</h2>
+    </div>
+    <div class="benefits-list">
+      <div class="benefit-item">
+        <div class="benefit-icon"><i class="fas fa-hands-helping"></i></div>
+        <div class="benefit-content">
+          <h4>Expert Support</h4>
+          <p>Access our skilled HCV outreach team, training resources, and clinical expertise.</p>
+        </div>
+      </div>
+      <div class="benefit-item">
+        <div class="benefit-icon"><i class="fas fa-vial"></i></div>
+        <div class="benefit-content">
+          <h4>Testing Resources</h4>
+          <p>Receive point-of-care testing supplies and support to implement screening programs.</p>
+        </div>
+      </div>
+      <div class="benefit-item">
+        <div class="benefit-icon"><i class="fas fa-graduation-cap"></i></div>
+        <div class="benefit-content">
+          <h4>Education & Training</h4>
+          <p>Comprehensive training on HCV testing, counselling, harm reduction, and linkage to care.</p>
+        </div>
+      </div>
+      <div class="benefit-item">
+        <div class="benefit-icon"><i class="fas fa-link"></i></div>
+        <div class="benefit-content">
+          <h4>Care Coordination</h4>
+          <p>Seamless linkage to treatment through our pharmacist-led model and virtual consultations.</p>
+        </div>
+      </div>
+      <div class="benefit-item">
+        <div class="benefit-icon"><i class="fas fa-book"></i></div>
+        <div class="benefit-content">
+          <h4>Educational Materials</h4>
+          <p>Culturally appropriate resources and patient education in multiple languages.</p>
+        </div>
+      </div>
+      <div class="benefit-item">
+        <div class="benefit-icon"><i class="fas fa-chart-bar"></i></div>
+        <div class="benefit-content">
+          <h4>Data & Outcomes</h4>
+          <p>Contribute to provincial elimination efforts with quality data collection and tracking.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="section">
+  <div class="container">
+    <div class="section-header" style="text-align: center; max-width: 600px; margin: 0 auto 3rem;">
+      <p class="section-label">How to Partner</p>
+      <h2>Getting started is simple</h2>
+    </div>
+    <div class="timeline">
+      <div class="timeline-item">
+        <div class="timeline-num">01</div>
+        <h4>Initial Contact</h4>
+        <p>Reach out via our contact form or email to express interest. Tell us about your organization and populations you serve.</p>
+      </div>
+      <div class="timeline-item">
+        <div class="timeline-num">02</div>
+        <h4>Needs Assessment</h4>
+        <p>We'll schedule a meeting to understand your capacity, goals, and how we can best support your HCV initiatives.</p>
+      </div>
+      <div class="timeline-item">
+        <div class="timeline-num">03</div>
+        <h4>Partnership Agreement</h4>
+        <p>Together, we develop a plan outlining roles, responsibilities, and expected outcomes.</p>
+      </div>
+      <div class="timeline-item">
+        <div class="timeline-num">04</div>
+        <h4>Training & Setup</h4>
+        <p>Our team provides comprehensive training, supplies, and support to launch HCV services at your site.</p>
+      </div>
+      <div class="timeline-item">
+        <div class="timeline-num">05</div>
+        <h4>Ongoing Collaboration</h4>
+        <p>We maintain regular communication, ongoing support, and work together toward HCV elimination.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="cta-banner">
+  <div class="container">
+    <div class="cta-content">
+      <div class="cta-text">
+        <h2>Ready to make a difference?</h2>
+        <p>Join our network of partners working to eliminate Hepatitis C in Ontario.</p>
+      </div>
+      <a href="contact.html" class="btn btn-dark">Become a Partner</a>
+    </div>
+  </div>
+</section>
 
 <footer>
-  <p>&copy; 2025 HEP C - Venier Project. All rights reserved.</p>
+  <div class="container">
+    <div class="footer-grid">
+      <div class="footer-about">
+        <img src="assets/imgs/test.png" alt="HCV Free - The Venier Project" style="height: 140px;">
+        <p>Dedicated to eliminating Hepatitis C in Ontario through accessible testing, treatment, and education.</p>
+      </div>
+      <div class="footer-col">
+        <h4>Navigation</h4>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="partners.html">Partners</a></li>
+        </ul>
+      </div>
+      <div class="footer-col">
+        <h4>Resources</h4>
+        <ul>
+          <li><a href="resources.html">All Resources</a></li>
+          <li><a href="#">Testing Locations</a></li>
+          <li><a href="#">For Providers</a></li>
+        </ul>
+      </div>
+      <div class="footer-col">
+        <h4>Contact</h4>
+        <ul>
+          <li><a href="mailto:elisavenier@rogers.com">elisavenier@rogers.com</a></li>
+          <li><a href="tel:+16476716076">(647) 671-6076</a></li>
+          <li>Ontario, Canada</li>
+        </ul>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <p>&copy; 2025 HEP C Venier Project. All rights reserved.</p>
+    </div>
+  </div>
 </footer>
 
 </body>
