--- a/roadmap.html
+++ b/roadmap.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <header>
-  <h1>HEP C - Venier Project</h1>
+  <h1><img src="logo.png" alt="HEP C - Venier Project Logo"> HEP C - Venier Project</h1>
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
